--- a/source/css/_components/tag-plugins/image.styl
+++ b/source/css/_components/tag-plugins/image.styl
@@ -24,6 +24,7 @@
       object-fit: cover
       border-radius: $border-image
     .image-download
+      z-index: 2
       position: absolute
       bottom: 8px
       right: 8px
